solucion problema ecommerc.js

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,14 +1,9 @@
+<!-- NUEVOv2 - Vista de Login -->
 <div class="box">
   <h3>Login</h3>
   <form id="login-form">
     <input id="email" name="email" type="email" placeholder="Email" required />
-    <input
-      id="password"
-      name="password"
-      type="password"
-      placeholder="Password"
-      required
-    />
+    <input id="password" name="password" type="password" placeholder="Password" required />
     <button id="button-login" class="button">Iniciar sesión</button>
   </form>
   <p>¿No tienes cuenta? <a href="/register">Regístrate</a></p>
