--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,29 +1,12 @@
+<!-- NUEVOv2 - Vista de Registro -->
 <div class="box">
   <h3>Registro</h3>
   <form id="register-form">
-    <input
-      id="first_name"
-      name="first_name"
-      type="text"
-      placeholder="Nombre"
-      required
-    />
-    <input
-      id="last_name"
-      name="last_name"
-      type="text"
-      placeholder="Apellido"
-      required
-    />
+    <input id="first_name" name="first_name" type="text" placeholder="Nombre" required />
+    <input id="last_name" name="last_name" type="text" placeholder="Apellido" required />
     <input id="email" name="email" type="email" placeholder="Email" required />
     <input id="age" name="age" type="number" placeholder="Edad" required />
-    <input
-      id="password"
-      name="password"
-      type="password"
-      placeholder="Password"
-      required
-    />
+    <input id="password" name="password" type="password" placeholder="Password" required />
     <button id="button-register" class="button">Registrarse</button>
   </form>
   <p>¿Ya tienes cuenta? <a href="/login">Inicia sesión</a></p>
